update docs. [skip CI]

--- a/Site/docs/api/intro.mdx
+++ b/Site/docs/api/intro.mdx
@@ -12,7 +12,6 @@ This category provides general functions and services of the engine.
 
 * [App](/docs/api/Class/App)
 * [View](/docs/api/Class/View)
-* [Scheduler](/docs/api/Class/Scheduler)
 * [Profiler](/docs/api/Class%20Object/Profiler)
 * [Object](/docs/api/Class/Object)
 
@@ -50,15 +49,16 @@ This category provides a range of data structures and types.
 * [Color](/docs/api/Class/Color)
 * [Color3](/docs/api/Class/Color3)
 
-## Scene and Event Management
+## Scene Management
 
-This category is for managing game scene trees and events.
+This category is for managing game scene trees.
 
 ### Tree Management
 
 This category provides the management of the root nodes and cameras of the game scene.
 
 * [Director](/docs/api/Class/Director)
+* [Scheduler](/docs/api/Class/Scheduler)
 * [Camera](/docs/api/Class/Camera)
 * [Camera2D](/docs/api/Class/Camera2D)
 * [CameraOtho](/docs/api/Class/CameraOtho)
@@ -73,6 +73,10 @@ This category provides the management of game scene nodes and node events.
 * [Slot](/docs/api/Class/Slot)
 * [GSlot](/docs/api/Class/GSlot)
 * [emit](/docs/api/Module/emit)
+
+## Event Management
+
+This category is for managing game events.
 
 ### Global Events
 
@@ -218,3 +222,9 @@ This category provides the functionality for loading and executing complex game 
 * [TextResult](/docs/api/Class/YarnRunner/TextResult)
 * [OptionResult](/docs/api/Class/YarnRunner/OptionResult)
 * [Markup](/docs/api/Class/YarnRunner/Markup)
+
+## Networking Service
+
+This category provides the functionality for networking service.
+
+* [HttpClient](/docs/api/Class/HttpClient)
