--- a/Site/i18n/zh-Hans/docusaurus-plugin-content-docs/current/api/intro.mdx
+++ b/Site/i18n/zh-Hans/docusaurus-plugin-content-docs/current/api/intro.mdx
@@ -12,7 +12,6 @@ sidebar_position: 0
 
 * [App](/docs/api/Class/App)
 * [View](/docs/api/Class/View)
-* [Scheduler](/docs/api/Class/Scheduler)
 * [Profiler](/docs/api/Class%20Object/Profiler)
 * [Object](/docs/api/Class/Object)
 
@@ -50,15 +49,16 @@ sidebar_position: 0
 * [Color](/docs/api/Class/Color)
 * [Color3](/docs/api/Class/Color3)
 
-## 场景树和事件管理
+## 场景管理
 
-&emsp;&emsp;这个类别负责游戏场景树和事件的管理。
+&emsp;&emsp;这个类别负责游戏场景树的管理。
 
 ### 场景树管理
 
 &emsp;&emsp;这里提供游戏场景树根节点和摄像机的管理。
 
 * [Director](/docs/api/Class/Director)
+* [Scheduler](/docs/api/Class/Scheduler)
 * [Camera](/docs/api/Class/Camera)
 * [Camera2D](/docs/api/Class/Camera2D)
 * [CameraOtho](/docs/api/Class/CameraOtho)
@@ -73,6 +73,10 @@ sidebar_position: 0
 * [Slot](/docs/api/Class/Slot)
 * [GSlot](/docs/api/Class/GSlot)
 * [emit](/docs/api/Module/emit)
+
+## 事件管理
+
+&emsp;&emsp;这个类别负责游戏事件的管理。
 
 ### 全局事件
 
@@ -164,7 +168,7 @@ sidebar_position: 0
 * [MoveJoint](/docs/api/Class/MoveJoint)
 * [MotorJoint](/docs/api/Class/MotorJoint)
 
-## ECS系统
+## ECS 系统
 
 &emsp;&emsp;这个类别负责提供实体组件系统（ECS）的功能。
 
@@ -218,3 +222,9 @@ sidebar_position: 0
 * [TextResult](/docs/api/Class/YarnRunner/TextResult)
 * [OptionResult](/docs/api/Class/YarnRunner/OptionResult)
 * [Markup](/docs/api/Class/YarnRunner/Markup)
+
+## 网络服务
+
+&emsp;&emsp;这个类别负责提供网络通讯相关的功能。
+
+* [HttpClient](/docs/api/Class/HttpClient)
